# screen-recorder

./: README.md  config.py  pyproject.toml  record.py
pyscreencap/: __init__.py  __main__.py  record.py
