[tool.poetry]
name = "pyscreencap"
version = "0.8.0"
description = "A python based screen recorder - and for free!"
authors = ["Tom Thornton <thomas.thornton92@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.4.0"
PyAutoGUI = "^0.9.52"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
